src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Walk_in_Source__c</fullName>
        <label>Walk-in Source</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corprate Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Walk_in_Sub_Source__c</fullName>
        <label>Sub Source</label>
        <picklist>
            <controllingField>Walk_in_Source__c</controllingField>
            <picklistValues>
                <fullName>99 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magic Bricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times Of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakaal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Walkin_Source_Date__c</fullName>
        <label>Walkin Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Banner_Size__c</fullName>
        <description>Also using for loan officer name</description>
        <label>Web Banner Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Banner_Source__c</fullName>
        <label>Web Banner Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xcelerate_ID__c</fullName>
        <formula>IF( AND(ISNULL( Channel_Partner__c ), ISBLANK( Channel_Partner__c )), &apos; &apos;, Channel_Partner__r.Channel_Partner__r.Xcelerate_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xcelerate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dialingCode__c</fullName>
        <label>dialingCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailAddress__c</fullName>
        <description>web2lead enquiry fields</description>
        <label>emailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <description>web2lead enquiry fields</description>
        <label>source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_log_url__c</fullName>
        <label>voice_log_url</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>